<?xml version="1.0" encoding="utf-8"?><!--
    ~ Copyright 2022 The TensorFlow Authors. All Rights Reserved.
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
-->
<resources>
    <string name="app_name">Fluent Hands</string>

    <string name="media_pipe">MediaPipe</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing
        maximum recognized results button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maximum recognized results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing
        threshold of recognized hand gesture results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing
        threshold of recognized hand gesture results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gallery">Gallery</string>
    <string name="tv_gallery_placeholder">Click + to add an image or a video
        to begin running the gesture recognizer.</string>

    <string name="label_inference_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_hand_detection_confidence_threshold">Detection
        Threshold</string>
    <string name="label_hand_tracking_confidence_threshold">Tracking
        Threshold</string>
    <string name="label_hand_presence_confidence_threshold">Presence
        Threshold</string>
    <string name="label_delegate">Delegate</string>
    <string name="menu_quiz">Quiz</string>
    <string name="learn">Learn</string>
    <string name="menu_translate">Translate</string>
    <string name="menu_settings">Settings</string>
    <string name="settingsTitle">Settings</string>
    <string name="userProfileButton">Update User Profile</string>
    <string name="UserProfileHint">Name, Profile Photo</string>
    <string name="settingsName">"Name: "</string>
    <string name="settingsEmail">Email:</string>
    <string name="settingsScore">Average Score:</string>
    <string name="difficultySettings">Set Difficulty:</string>
    <string name="updateProfile">Update Profile:</string>
    <string name="profilePhotoText">Profile Photo:</string>
    <string name="buttonChangeText">Change</string>
    <string name="nameText">Name:</string>
    <string name="editNameHint">Your Name..</string>
    <string name="emailText">Email:</string>
    <string name="editEmailHint">Your Email..</string>
    <string name="genderText">Gender:</string>
    <string name="button_female">Female</string>
    <string name="button_male">Male</string>
    <string name="buttonSaveText">Save</string>
    <string name="buttonCancelText">Cancel</string>
    <string name="takePicture">Capture</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_help">Help</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_results">Results</string>
    <string name="back_button_description">Back</string>
    <string name="flipCamera">Flip</string>

    <string name="signUpText">Not Registered Yet , <u><b>Sign Up</b></u> !</string>
    <string name="signInText">Already Registered , <u><b>Sign In</b></u> !</string>
</resources>
