<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/helloSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello Daniel..."
            android:textSize="22sp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"

            />
        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="5dp"
            android:layout_weight="0"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settingsName"
            android:text="@string/settingsName"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settingsEmail"
            android:text="@string/settingsEmail"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settingsScore"
            android:text="@string/settingsScore"
            android:textSize="20sp"
            android:layout_marginBottom="12dp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/userProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userProfileButton"
            android:layout_margin="5dp"
            android:id="@+id/userProfile"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingTop="20dp"
            android:textSize="14sp"
            android:text="@string/UserProfileHint"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        >

        <TextView
            android:id="@+id/difficultySettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficultySettings"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:layout_marginBottom="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginTop="25dp">

            <SeekBar
                android:id="@+id/difficultySeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="2"
                android:progress="1"/>

            <TextView
                android:id="@+id/textEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/difficultySeekBar"
                android:layout_below="@id/difficultySeekBar"
                android:text="Easy"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/difficultySeekBar"
                android:text="Medium"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/difficultySeekBar"
                android:layout_below="@id/difficultySeekBar"
                android:text="Hard"
                android:layout_marginTop="8dp"/>
        </RelativeLayout>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/dateCreated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date Account Created: Nov 22, 2023 - 21:45 pst"/>

</LinearLayout>