<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <!-- Placeholder for AppBarLayout -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Scrollable content starts here -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"> <!-- Ensures content starts below the app bar -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Your existing LinearLayout content starts here -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/helloSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="Hello Daniel..."
                    android:textSize="22sp" />

                <ImageView
                    android:id="@+id/profilePhoto"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_margin="5dp"
                    android:layout_weight="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settingsName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsName"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/settingsEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsEmail"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/settingsScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/settingsScore"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/userProfileButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@android:color/transparent" />

                <TextView
                    android:id="@+id/userProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/userProfileButton"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="20dp"
                    android:text="@string/UserProfileHint"
                    android:textSize="14sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/difficultySettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/difficultySettings"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:padding="16dp">

                    <SeekBar
                        android:id="@+id/difficultySeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:max="2"
                        android:padding="8dp"
                        android:progress="1"
                        android:progressDrawable="@drawable/seekbar_progress"
                        android:thumb="@drawable/seekbar_thumb" />

                    <TextView
                        android:id="@+id/textEasy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/difficultySeekBar"
                        android:layout_alignStart="@id/difficultySeekBar"
                        android:layout_marginTop="8dp"
                        android:text="Easy" />

                    <TextView
                        android:id="@+id/textMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/difficultySeekBar"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:text="Medium" />

                    <TextView
                        android:id="@+id/textHard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/difficultySeekBar"
                        android:layout_alignEnd="@id/difficultySeekBar"
                        android:layout_marginTop="8dp"
                        android:text="Hard" />
                </RelativeLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/dateCreated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Date Account Created: Nov 22, 2023 - 21:45 pst" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>